# confidential-ml-transport

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench-nightly.yml  ci.yml
benches/: competitors.rs  confidential_overhead.rs  frame_codec.rs  handshake.rs  reconnect.rs  throughput.rs
benchmark_results/: BENCHMARK_BRIEF.md  cross_provider_comparison.md  transport_performance_aws_m6i.json  transport_performance_aws_m6i.md  transport_performance_azure_dc4ads_v5.json  transport_performance_azure_dc4ads_v5.md  transport_performance_gcp_c3_standard_4.json  transport_performance_gcp_c3_standard_4.md
benchmark_results/hostile_host_demo/azure_dc4ads_v5/: summary.json
benchmark_results/nitro_enclave/: isolated_bench_results.json  isolated_bench_results.md  nitro_test_results.json  nitro_test_results.md  production_bench_results.json  production_bench_results.md
examples/: azure-sev-snp-smoke.rs  echo_server.rs  nitro-real-quote-verify.rs  tdx-real-quote-verify.rs
examples/hostile-host-demo/: Cargo.toml  README.md
examples/hostile-host-demo/assets/: demo.cast  record.sh
examples/hostile-host-demo/src/: main.rs
examples/nitro-inference/: Cargo.toml  Dockerfile  README.md  init.sh
examples/nitro-inference/scripts/: build.sh  run.sh
examples/nitro-inference/src/: bench_client.rs  client.rs  model.rs  server.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aead_open.rs  fuzz_frame_decode.rs  fuzz_handshake_init.rs  fuzz_handshake_resp.rs  fuzz_tensor_decode.rs
fuzz/seed_corpus/fuzz_aead_open/: seed_2  seed_3  seed_4
fuzz/seed_corpus/fuzz_frame_decode/: seed_1  seed_2  seed_3  seed_4  seed_5  seed_6  seed_7
fuzz/seed_corpus/fuzz_handshake_init/: seed_3  seed_4  seed_5  seed_6
fuzz/seed_corpus/fuzz_handshake_resp/: seed_1  seed_2  seed_3  seed_4  seed_5
fuzz/seed_corpus/fuzz_tensor_decode/: seed_2  seed_3
scripts/: bench_confidential_overhead.sh  bench_transport_performance.sh  check_bench_constants.sh  check_bench_slo.sh  check_bench_tables.sh  fetch-snp-fixtures.sh
src/: error.rs  lib.rs
src/attestation/: azure_sev.rs  mock.rs  mod.rs  nitro.rs  sev.rs  sev_errors.rs  sev_policy.rs  tdx.rs  types.rs  vcek_extensions.rs
src/crypto/: hpke.rs  mod.rs  seal.rs  transcript.rs
src/frame/: codec.rs  mod.rs  tensor.rs
src/proxy/: client.rs  mod.rs  server.rs
src/session/: channel.rs  handshake.rs  mod.rs  retry.rs
src/transport/: mod.rs  tcp.rs  vsock.rs
test_assets/sev-snp/: MANIFEST.txt  README.md
test_assets/sev-snp/Genoa/: crl.der
test_assets/sev-snp/Milan/: crl.der
test_assets/sev-snp/Turin/: crl.der
tests/: codec_integration.rs  frame_roundtrip.rs  hardening_regression.rs  nitro_verifier.rs  proxy_integration.rs  security_audit.rs  session_mock.rs  session_retry.rs  sev_snp_attestation.rs  tdx_attestation.rs  transport_tcp.rs
