[package]
name = "confidential-ml-transport"
version = "0.1.0"
edition = "2021"
description = "Attestation-bound encrypted tensor transport for confidential ML inference"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsyrulb/confidential-ml-transport"
keywords = ["tee", "confidential-computing", "ml", "vsock", "encryption"]
categories = ["cryptography", "network-programming"]

[dependencies]
bytes = "1.5"
tokio = { version = "1.38", features = ["net", "io-util", "sync", "macros", "rt", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
thiserror = "2"
tracing = "0.1"
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
async-trait = "0.1"
hex = "0.4"
zeroize = { version = "1.8", features = ["derive"] }
tokio-vsock = { version = "0.7", optional = true }
coset = { version = "0.3", optional = true }
ciborium = { version = "0.2", optional = true }
openssl = { version = "0.10", optional = true }
aws-nitro-enclaves-nsm-api = { version = "0.4", optional = true }
serde_bytes = { version = "0.11", optional = true }

[features]
default = ["mock", "tcp"]
mock = []
tcp = []
vsock = ["dep:tokio-vsock"]
nitro = ["dep:coset", "dep:ciborium", "dep:openssl", "dep:aws-nitro-enclaves-nsm-api", "dep:serde_bytes"]

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1.38", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "frame_codec"
harness = false

[[example]]
name = "echo_server"
required-features = ["tcp", "mock"]
